--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,18 @@
-h1 {
-  color:#ffd700
+body {
+  background: #000;
 }
 
-.banner {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  width: 100%;
-  height: 200px;
-  z-index: -1;
-  background-color: black;
-}
-
-#question-box {
-background-color: lightgrey;
-width: 300px;
-border: 25px solid green;
-padding: 25px;
-margin: 25px;
+.star-wars {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  height: 100px;
+  color: #feda4a;
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-size: 300%;
+  font-weight: 600;
+  letter-spacing: 6px;
+  line-height: 150%;
+  perspective: 400px;
+  text-align: justify;
 }
