basically achieved mvp but still have a few more things to do

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
   background: #000;
 }
 
+p {
+  color: #33adff;
+  font-size: 170%
+}
+
 .star-wars {
   display: flex;
   justify-content: center;
